--- a/pro2style.css
+++ b/pro2style.css
@@ -1,10 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
-
 :root{
     --md-dark-color: #1d1d1d;
-    --dark-color: #171717;
+    --dark-color: #171717;    
     --light-dark-color: #292929;
-    --yellow-color: #a3c585;
 }
 *{
     padding: 0;
@@ -13,7 +10,11 @@
             box-sizing: border-box;
 }
 body{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Jacques Francois Shadow', cursive;
+    background-image: url(theater.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% 105%;
 }
 a{
     text-decoration: none;
@@ -24,7 +25,7 @@ img{
 }
 .wrapper{
     min-height: 100vh;
-    background-color: var(--dark-color);
+    /*background-color: var(--dark-color);*/
 }
 .wrapper .container{
     max-width: 1200px;
@@ -32,17 +33,18 @@ img{
     padding: 0 1rem;
 }
 .search-container{
-    background-color: var(--md-dark-color);
+    /*background-color: var(--md-dark-color);*/
     height: 180px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
+    /*-webkit-box-align: center;
+        -ms-flex-align: center;*/
             align-items: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+        
 }
 .logo{
     padding: 1rem 0;
@@ -54,7 +56,7 @@ img{
     font-weight: bold;
 }
 .logo p span{
-    color: var(--yellow-color);
+    color: rgb(218, 51, 51);
 }
 .search-element{
     display: -webkit-box;
@@ -72,12 +74,13 @@ img{
             flex-direction: column;
     position: relative;
 }
+
 .search-element h3{
     -ms-flex-item-align: center;
         align-self: center;
     margin-right: 1rem;
     font-size: 2rem;
-    color: #fff;
+    color: black;
     font-weight: 500;
     margin-bottom: 1.5rem;
 }
@@ -88,22 +91,23 @@ img{
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
     outline: none;
-    color: var(--light-dark-color);
-    width: 350px;
+    background-color:var(--light-dark-color);
+    width: 380px;/*size of the text box*/   
+    color: white;/*color of words that are typed by user*/
 }
 .search-list{
     position: absolute;
     right: 0;
     top: 100%;
-    max-height: 500px;
+    max-height: 380px;
     overflow-y: scroll;
     z-index: 10;
 }
 .search-list .search-list-item{
-    background-color: var(--light-dark-color);
+    background-color: white;/*background color of the pop-up list*/
     padding: 0.5rem;
     border-bottom: 1px solid var(--dark-color);
-    width: calc(350px - 8px);
+    width: 380px;
     color: #fff;
     cursor: pointer;
     -webkit-transition: background-color 200ms ease;
@@ -130,10 +134,9 @@ img{
     font-size: 1rem;
 }
 .search-item-info p{
-    font-size: 0.8rem;
+    font-size: 2rem;
     margin-top: 0.5rem;
     font-weight: 600;
-    opacity: 0.6;
 }
 
 /* thumbnail */
@@ -145,7 +148,8 @@ img{
             box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 .search-list::-webkit-scrollbar-thumb{
-    background-color: var(--yellow-color);
+    background-color: gray;
+    opacity: 0.6%;
     outline: none;
     border-radius: 10px;
 }
@@ -157,23 +161,23 @@ img{
 
 /* movie result */
 .result-container{
-    padding: 3rem 0;
+    padding: 1rem 0;
 }
 .movie-poster img{
-    max-width: 300px;
+    max-width: 200px;
     margin: 0 auto;
     border: 4px solid #fff;
 }
 .movie-info{
     text-align: center;
-    color: #fff;
+    color: black;
     padding-top: 3rem;
 }
 
 /* movie info stylings */
 .movie-title{
     font-size: 2rem;
-    color: var(--yellow-color);
+    color: black;
 }
 .movie-misc-info{
     list-style-type: none;
@@ -192,7 +196,7 @@ img{
     font-weight: 500;
 }
 .movie-info .rated{
-    background-color: var(--yellow-color);
+    background-color: lightgoldenrodyellow;
     padding: 0.4rem;
     margin: 0 0.4rem;
     border-radius: 3px;
